# xquic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql-analysis.yml  sync-upstream.yml
cmake/: FindSSL.cmake
demo/: xqc_hq_request.c
docs/: release_notes_PR3_L3.md
docs/audit-notes/: PR8-l5e.md  pr4-l5a-audit-findings.md  pr5-l5b-audit.md  pr6-l5c-audit.md
include/xquic/: xqc_configure.h  xqc_errno.h  xqc_http3.h  xquic.h  xquic_typedef.h
scripts/: case_test.sh
src/http3/: xqc_h3_conn.c  xqc_h3_ctx.c  xqc_h3_defs.h  xqc_h3_ext_dgram.c  xqc_h3_ext_masque.c  xqc_h3_ext_masque.h  xqc_h3_request.c  xqc_h3_stream.c  xqc_h3_stream.h
src/http3/frame/: xqc_h3_frame.c
src/tls/: xqc_crypto.c  xqc_crypto.h  xqc_tls.c  xqc_tls.h  xqc_tls_common.h
src/transport/: xqc_cid.c  xqc_cid.h  xqc_conn.c  xqc_conn.h  xqc_datagram.c  xqc_engine.c  xqc_frame.c  xqc_frame.h  xqc_frame_parser.c  xqc_frame_parser.h  xqc_multipath.c  xqc_multipath.h  xqc_packet.h  xqc_packet_out.c  xqc_packet_out.h  xqc_send_ctl.c  xqc_send_ctl.h  xqc_stream.c  xqc_stream.h  xqc_transport_params.c  xqc_transport_params.h
src/transport/scheduler/: xqc_scheduler_wlb.c  xqc_scheduler_wlb.h
tests/: CMakeLists.txt  masque_client.c  masque_common.h  masque_interop.sh  test_client.c  test_server.c
tests/connectip_proxy/: .gitignore  go.mod  main.go
tests/fuzz/: CMakeLists.txt  README.md  fuzz_masque_libfuzzer.c  masque.dict  run_smoke.sh
tests/fuzz/corpus/masque/: .gitignore
tests/unittest/: main.c  xqc_cid_test.c  xqc_datagram_test.c  xqc_datagram_test.h  xqc_h3_test.c  xqc_masque_test.c  xqc_masque_test.h  xqc_mp21_compliance_test.c  xqc_mp21_compliance_test.h  xqc_test_helpers.c  xqc_test_helpers.h  xqc_test_helpers_test.c  xqc_test_path_hard_cap.c  xqc_test_path_hard_cap.h
